src/test_output/guided/crash-oracle/fail/torch.nn.LSTM/55.py
import torch
arg_1 = 205
arg_2 = -121.0
arg_3 = True
arg_4 = True
arg_class = torch.nn.LSTM(arg_1,arg_2,bidirectional=arg_3,batch_first=arg_4,)
arg_5_0_tensor = torch.randint(-4096,8,[1, 31, 234], dtype=torch.int32)
arg_5_0 = arg_5_0_tensor.clone()
arg_5 = [arg_5_0,]
res = arg_class(*arg_5)
